--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <meta name="google-site-verification" content="dzKqDTJKWiyHgObUw1gdPoH-jLAzvzr4SUwgVPaEEso" />
     <meta name="description" content="Dịch vụ đặt xe taxi nhanh chóng, tiện lợi và giá rẻ.">
     <meta name="keywords" content="taxi, đặt xe, taxi giá rẻ, đặt xe online, dịch vụ xe, thuê xe, vận chuyển, taxi sân bay, taxi long xuyên, taxi an giang, xe du lịch, đặt xe sân bay, taxi ngân giang, ngân giang">
     <meta name="author" content="Taxi Ngân Giang, Dịch vụ taxi du lịch Ngân Giang">
